# genomic_scripts

./: .gitignore  .gitmodules  README.md  definitions.py
adder/: CMakeLists.txt  README.md  main.cpp
adder/src/: arg_parse.h
barcode2coord/: barcode2coord.py
bundle/: CMakeLists.txt  README.md  bundle.py  main.cpp
chess/: createRelease.py
chess/example/: chess3.0.1.adj_stop.corrected.gffread.chr21.gtf  hs38DH.len
clustRep/: README.rst  clustrep.py
clustRep/example/: groups.tsv
ender/: CMakeLists.txt  README.md  main.cpp
fetch_annotations/: fetch_annotations.py
gff2intron/: gff2intron.py  requirements.txt
gffcmp_multi/: gffcmp_multi.py
grouper/: CMakeLists.txt  README.md  main.cpp
gtf_sort/: gtf_sort.py
namer/: CMakeLists.txt  main.cpp
novel_introns/: CMakeLists.txt  main.cpp  novel_introns1.cpp
novel_introns/src/: TrackingTree.cpp  TrackingTree.h
orfanage/: CMakeLists.txt  README.md  main.cpp
orfanage/src/: arg_parse.cpp
reader/: CMakeLists.txt  README.md  main.cpp
ris/: ris.py
ris/example/: AY69_A4p3_GIMAP7.R1.host.blastn.6  AY69_A4p3_GIMAP7.R1.path.blastn.6  AY69_A4p3_GIMAP7.R2  AY69_A4p3_GIMAP7.R2.grouped  AY69_A4p3_GIMAP7.R2.host.blastn.6  AY69_A4p3_GIMAP7.R2.path.blastn.6  AY69_E4p5_LTA.R2.corrected  AY69_E4p5_LTA.R2.grouped  AY69_E4p5_LTA.R2.host.blastn.6  AY69_E4p5_LTA.R2.path.blastn.6  AY69_G11p7_DAZAP1.R1  AY69_G11p7_DAZAP1.R1.host.blastn.6  AY69_G11p7_DAZAP1.R1.path.blastn.6  AY69_G11p7_DAZAP1.R2  AY69_G11p7_DAZAP1.R2.host.blastn.6  AY69_G11p7_DAZAP1.R2.path.blastn.6  GIMAP7.gff  GIMAP7.gtf  LTA.gtf  csess.1.0.0.known.gtf  host.sub.2.blast  host.sub.blast  path.blast  path.sub.2.blast  path.sub.blast  r  r.corrected  r.grouped
ris/example/AY69_G8p3_ELK4/: AY69_G8p3_ELK4.R1.host.blastn.6  AY69_G8p3_ELK4.R1.path.blastn.6  AY69_G8p3_ELK4.R2.host.blastn.6  AY69_G8p3_ELK4.R2.path.blastn.6  ELK4.gtf  ris.corrected  ris.grouped
seeder/: CMakeLists.txt  README.md  main.cpp
standard_annotation/: standard_annotation.py
subset_tree/: README.rst  requirements.txt  subset_tree.py
subset_tree/data/: nextstrain_meta.csv  nextstrain_ncov_global_timetree_170221.nwk
